fix top menu on mobile

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -2529,6 +2529,12 @@ input[type=file] {
   ul {
     &.left {
       width: auto;
+      @media #{$small-only} {
+        width: 50%;
+        input {
+          width: 110px;
+        }
+      }
       li {
         float: left;
       }
@@ -2539,6 +2545,9 @@ input[type=file] {
     }
     &.right {
       width: auto;
+      @media #{$small-only} {
+      width: 50%;
+      }
       li {
         float: left;
         a {
